Bug 1824871: Rename endPass -> end on GPURenderPassEncoder, GPUComputePassEncoder. r=webidl,webgpu-reviewers,teoxoy,smaug
These were renamed in [gpuweb#2560](https://github.com/gpuweb/gpuweb/pull/2560).

Differential Revision: https://phabricator.services.mozilla.com/D173785

--- a/dom/webgpu/mochitest/test_submit_render_empty.html
+++ b/dom/webgpu/mochitest/test_submit_render_empty.html
@@ -36,7 +36,7 @@ const func = async function() {
     }],
   });
   pass.executeBundles([bundle]);
-  pass.endPass();
+  pass.end();
   const command_buffer = encoder.finish();
 
   device.queue.submit([command_buffer]);
