Backed out 2 changesets (bug 1825807) for causing failures in /browser_parsable_css.js CLOSED TREE
Backed out changeset 454a01f16f5b (bug 1825807)
Backed out changeset a82344255795 (bug 1825807)

--- a/testing/web-platform/tests/html/semantics/popovers/popover-inside-display-none.html
+++ b/testing/web-platform/tests/html/semantics/popovers/popover-inside-display-none.html
@@ -14,6 +14,6 @@ No popover should be displayed here.<p>
 <script>
   const popover = document.querySelector('[popover]');
   popover.showPopover();
-  if (!popover.matches(':popover-open'))
+  if (!popover.matches(':open'))
     document.body.appendChild(document.createTextNode('FAIL'));
 </script>
