--- a/testing/web-platform/tests/html/semantics/popovers/popover-removal-2.html
+++ b/testing/web-platform/tests/html/semantics/popovers/popover-removal-2.html
@@ -17,13 +17,13 @@
       const frame2Doc = document.getElementById('frame2').contentDocument;
       const popover = frame1Doc.querySelector('[popover]');
       assert_true(!!popover);
-      assert_false(popover.matches(':popover-open'));
+      assert_false(popover.matches(':open'));
       popover.showPopover();
-      assert_true(popover.matches(':popover-open'));
+      assert_true(popover.matches(':open'));
       frame2Doc.body.appendChild(popover);
-      assert_false(popover.matches(':popover-open'));
+      assert_false(popover.matches(':open'));
       popover.showPopover();
-      assert_true(popover.matches(':popover-open'));
+      assert_true(popover.matches(':open'));
     }, 'Moving popover between documents shouldn\'t cause issues');
   };
 </script>
