Bug 1736937 - Add "Search bookmarks" option in bookmarks menu. r=dao
https://treeherder.mozilla.org/jobs?repo=try&revision=f1324632dfb7201ad71fddb074ec7e008c32d153

Differential Revision: https://phabricator.services.mozilla.com/D175604

--- a/browser/base/content/navigator-toolbox.inc.xhtml
+++ b/browser/base/content/navigator-toolbox.inc.xhtml
@@ -625,6 +625,10 @@
                   data-l10n-args='{ "isVisible": false }'
                   oncommand="SidebarUI.toggle('viewBookmarksSidebar');"
                   key="viewBookmarksSidebarKb"/>
+        <menuitem id="BMB_searchBookmarks"
+                  class="subviewbutton"
+                  data-l10n-id="bookmarks-search"
+                  oncommand="PlacesCommandHook.searchBookmarks();"/>
         <!-- NB: temporary solution for bug 985024, this should go away soon. -->
         <menuitem id="BMB_bookmarksShowAllTop"
                   class="subviewbutton"
