--- a/dom/webgpu/mochitest/test_submit_render_empty.html
+++ b/dom/webgpu/mochitest/test_submit_render_empty.html
@@ -31,7 +31,8 @@ const func = async function() {
   const pass = encoder.beginRenderPass({
     colorAttachments: [{
       view,
-      loadValue: { r: 0, g: 0, b: 0, a: 0 },
+      clearValue: { r: 0, g: 0, b: 0, a: 0 },
+      loadOp: "clear",
       storeOp: "store",
     }],
   });
