--- a/gfx/layers/apz/test/mochitest/test_group_scrollend.html
+++ b/gfx/layers/apz/test/mochitest/test_group_scrollend.html
@@ -10,6 +10,8 @@
 
 var basePrefs = [
   ["apz.test.mac.synth_wheel_input", true],
+  ["general.smoothScroll", true],
+  ["ui.prefersReducedMotion", 0],
 ];
 
 var scrollendDisabledPrefs = [
@@ -23,8 +25,8 @@ var prefs = [
 ];
 
 var smoothScrollDisabled = [
-  ...basePrefs,
-  ["general.smoothScroll", true],
+  ["apz.test.mac.synth_wheel_input", true],
+  ["general.smoothScroll", false],
 ];
 
 var subtests = [
