--- a/gfx/layers/apz/test/mochitest/test_group_programmatic_scroll_behavior.html
+++ b/gfx/layers/apz/test/mochitest/test_group_programmatic_scroll_behavior.html
@@ -9,20 +9,19 @@
   <link rel="stylesheet" type="text/css" href="/tests/SimpleTest/test.css"/>
   <script type="application/javascript">
 
-let preferenceSets = [
-  [["general.smoothScroll", true], ["ui.prefersReducedMotion", 0]],
-  [["general.smoothScroll", false], ["ui.prefersReducedMotion", 0]],
-  [["general.smoothScroll", true], ["ui.prefersReducedMotion", 1]],
-];
+let smoothScrollEnabled = [["general.smoothScroll", true]];
+let smoothScrollDisabled = [["general.smoothScroll", false]];
 
-let subtests = preferenceSets.flatMap((prefs) => {
-  return [
-    {"file": "helper_programmatic_scroll_behavior.html?action=scrollIntoView", "prefs": prefs},
-    {"file": "helper_programmatic_scroll_behavior.html?action=scrollBy", "prefs": prefs},
-    {"file": "helper_programmatic_scroll_behavior.html?action=scrollTo", "prefs": prefs},
-    {"file": "helper_programmatic_scroll_behavior.html?action=scroll", "prefs": prefs},
-  ];
-});
+var subtests = [
+  {"file": "helper_programmatic_scroll_behavior.html?action=scrollIntoView", "prefs": smoothScrollEnabled},
+  {"file": "helper_programmatic_scroll_behavior.html?action=scrollIntoView", "prefs": smoothScrollDisabled},
+  {"file": "helper_programmatic_scroll_behavior.html?action=scrollBy", "prefs": smoothScrollEnabled},
+  {"file": "helper_programmatic_scroll_behavior.html?action=scrollBy", "prefs": smoothScrollDisabled},
+  {"file": "helper_programmatic_scroll_behavior.html?action=scrollTo", "prefs": smoothScrollEnabled},
+  {"file": "helper_programmatic_scroll_behavior.html?action=scrollTo", "prefs": smoothScrollDisabled},
+  {"file": "helper_programmatic_scroll_behavior.html?action=scroll", "prefs": smoothScrollEnabled},
+  {"file": "helper_programmatic_scroll_behavior.html?action=scroll", "prefs": smoothScrollDisabled},
+];
 
 if (isApzEnabled()) {
   SimpleTest.waitForExplicitFinish();
