Bug 1861349 - Allow resizing certManager columns. r=settings-reviewers,Gijs, a=dsmith
See also bug 1821404.

Differential Revision: https://phabricator.services.mozilla.com/D192058

--- a/security/manager/pki/resources/content/certManager.xhtml
+++ b/security/manager/pki/resources/content/certManager.xhtml
@@ -63,21 +63,18 @@
                 data-l10n-id="certmgr-cert-name"
                 primary="true"
                 persist="hidden width ordinal"
-                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
                 id="tokencol"
                 data-l10n-id="certmgr-token-name"
                 persist="hidden width ordinal"
-                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
                 id="serialnumcol"
                 data-l10n-id="certmgr-serial"
                 persist="hidden width ordinal"
-                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
@@ -85,14 +82,12 @@
                 data-l10n-id="certmgr-begins-label"
                 hidden="true"
                 persist="hidden width ordinal"
-                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
                 id="expiredcol"
                 data-l10n-id="certmgr-expires-label"
                 persist="hidden width ordinal"
-                flex="1"
               />
             </treecols>
             <treechildren ondblclick="viewCerts();" />
@@ -146,20 +141,17 @@
               data-l10n-id="certmgr-cert-host"
               primary="true"
               persist="hidden width ordinal"
-              flex="1"
             />
             <treecol
               id="certcol"
               data-l10n-id="certmgr-cert-name"
               primary="true"
               persist="hidden width ordinal"
-              flex="1"
             />
             <treecol
               id="serialnumcol"
               data-l10n-id="certmgr-serial"
               persist="hidden width ordinal"
-              flex="1"
             />
           </listheader>
           <richlistbox id="rememberedList" flex="1" selected="false" />
@@ -191,16 +183,11 @@
                 id="certcol"
                 data-l10n-id="certmgr-cert-name"
                 primary="true"
-                flex="1"
               />
               <splitter class="tree-splitter" />
-              <treecol id="emailcol" data-l10n-id="certmgr-email" flex="1" />
+              <treecol id="emailcol" data-l10n-id="certmgr-email" />
               <splitter class="tree-splitter" />
-              <treecol
-                id="expiredcol"
-                data-l10n-id="certmgr-expires-label"
-                flex="1"
-              />
+              <treecol id="expiredcol" data-l10n-id="certmgr-expires-label" />
             </treecols>
             <treechildren flex="1" ondblclick="viewCerts();" />
           </tree>
@@ -243,12 +230,10 @@
               id="sitecol"
               data-l10n-id="certmgr-cert-server"
               primary="true"
-              flex="1"
             />
             <treecol
               id="sha256col"
               data-l10n-id="certmgr-fingerprint-sha-256"
-              flex="1"
             />
           </listheader>
           <richlistbox
@@ -297,14 +282,12 @@
                 data-l10n-id="certmgr-cert-name"
                 primary="true"
                 persist="hidden width ordinal"
-                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
                 id="tokencol"
                 data-l10n-id="certmgr-token-name"
                 persist="hidden width ordinal"
-                flex="1"
               />
             </treecols>
             <treechildren ondblclick="viewCerts();" />
