Backed out changeset 6df364abb481 (bug 1861349) for causing new regression , a=backout

--- a/security/manager/pki/resources/content/certManager.xhtml
+++ b/security/manager/pki/resources/content/certManager.xhtml
@@ -63,18 +63,21 @@
                 data-l10n-id="certmgr-cert-name"
                 primary="true"
                 persist="hidden width ordinal"
+                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
                 id="tokencol"
                 data-l10n-id="certmgr-token-name"
                 persist="hidden width ordinal"
+                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
                 id="serialnumcol"
                 data-l10n-id="certmgr-serial"
                 persist="hidden width ordinal"
+                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
@@ -82,12 +85,14 @@
                 data-l10n-id="certmgr-begins-label"
                 hidden="true"
                 persist="hidden width ordinal"
+                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
                 id="expiredcol"
                 data-l10n-id="certmgr-expires-label"
                 persist="hidden width ordinal"
+                flex="1"
               />
             </treecols>
             <treechildren ondblclick="viewCerts();" />
@@ -141,17 +146,20 @@
               data-l10n-id="certmgr-cert-host"
               primary="true"
               persist="hidden width ordinal"
+              flex="1"
             />
             <treecol
               id="certcol"
               data-l10n-id="certmgr-cert-name"
               primary="true"
               persist="hidden width ordinal"
+              flex="1"
             />
             <treecol
               id="serialnumcol"
               data-l10n-id="certmgr-serial"
               persist="hidden width ordinal"
+              flex="1"
             />
           </listheader>
           <richlistbox id="rememberedList" flex="1" selected="false" />
@@ -183,11 +191,16 @@
                 id="certcol"
                 data-l10n-id="certmgr-cert-name"
                 primary="true"
+                flex="1"
               />
               <splitter class="tree-splitter" />
-              <treecol id="emailcol" data-l10n-id="certmgr-email" />
+              <treecol id="emailcol" data-l10n-id="certmgr-email" flex="1" />
               <splitter class="tree-splitter" />
-              <treecol id="expiredcol" data-l10n-id="certmgr-expires-label" />
+              <treecol
+                id="expiredcol"
+                data-l10n-id="certmgr-expires-label"
+                flex="1"
+              />
             </treecols>
             <treechildren flex="1" ondblclick="viewCerts();" />
           </tree>
@@ -230,10 +243,12 @@
               id="sitecol"
               data-l10n-id="certmgr-cert-server"
               primary="true"
+              flex="1"
             />
             <treecol
               id="sha256col"
               data-l10n-id="certmgr-fingerprint-sha-256"
+              flex="1"
             />
           </listheader>
           <richlistbox
@@ -282,12 +297,14 @@
                 data-l10n-id="certmgr-cert-name"
                 primary="true"
                 persist="hidden width ordinal"
+                flex="1"
               />
               <splitter class="tree-splitter" />
               <treecol
                 id="tokencol"
                 data-l10n-id="certmgr-token-name"
                 persist="hidden width ordinal"
+                flex="1"
               />
             </treecols>
             <treechildren ondblclick="viewCerts();" />
