--- a/testing/web-platform/tests/css/css-values/round-function.html
+++ b/testing/web-platform/tests/css/css-values/round-function.html
@@ -58,6 +58,19 @@ test_math_used("round(13px, -10px)", "10px");
 test_math_used("round(-13px, -10px)", "-10px");
 test_math_used("round(-18px, -10px)", "-20px");
 
+// Test with value that is an exact multiple of step
+test_math_used("round(10px, 5px)", "10px");
+test_math_used("round(nearest, 10px, 5px)", "10px");
+test_math_used("round(down, 10px, 5px)", "10px");
+test_math_used("round(up, 10px, 5px)", "10px");
+test_math_used("round(to-zero, 10px, 5px)", "10px");
+
+test_math_used("round(-10px, 5px)", "-10px");
+test_math_used("round(nearest, -10px, 5px)", "-10px");
+test_math_used("round(down, -10px, 5px)", "-10px");
+test_math_used("round(up, -10px, 5px)", "-10px");
+test_math_used("round(to-zero, -10px, 5px)", "-10px");
+
 // Extreme cases:
 
 // 0 step is NaN
